--- a/kirare_app/pubspec.yaml
+++ b/kirare_app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   record: ^5.0.4
   path_provider: ^2.1.1
   http: ^1.1.2
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
